# model

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  filecrypt.cpp  filecrypt.hpp  filecrypt.ui  main.cpp  model.cpp  model.hpp  model.ui
